--- a/configurableMenu@lestcape/locale/fr.po
+++ b/configurableMenu@lestcape/locale/fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-05-30 18:06-0600\n"
+"PO-Revision-Date: 2014-06-06 03:50-0600\n"
 "Last-Translator: Dupo <dupop35@yahoo.fr>\n"
 "Language-Team: Dupo <dupop35@yahoo.fr>\n"
 "MIME-Version: 1.0\n"
@@ -738,6 +738,16 @@ msgstr "Afficher un cadre autour des boutons de contrôle"
 msgid "Choose whether or not to have a box on the control buttons."
 msgstr "Afficher ou non un cadre autour des boutons de contrôle."
 
+#. configurableMenu@lestcape->settings-schema.json->categories-hover->description
+msgid "Open the category when I move my mouse over it"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->categories-hover->tooltip
+msgid ""
+"Choose whether or not to open the category when the mouse move over it, "
+"otherwise need the mouse click."
+msgstr ""
+
 #. configurableMenu@lestcape->settings-schema.json->categories-
 #. icons->description
 msgid "Show icons on the categories"
@@ -974,8 +984,10 @@ msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->installer-default->description
 msgid "Enable the default Cinnamon packages manager tools"
-msgstr ""
+msgstr "Activer les outils du gestionnaire de paquets de Cinnamon par défaut"
 
 #. configurableMenu@lestcape->settings-schema.json->installer-default->tooltip
 msgid "Allows the use of the default packages manager(only if it's available)."
 msgstr ""
+"Permet l'utilisation du gestionnaire de paquets par défaut (uniquement s'il "
+"est disponible)."
