--- a/configurableMenu@lestcape/locale/pt_BR.po
+++ b/configurableMenu@lestcape/locale/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-06-06 03:50-0600\n"
+"PO-Revision-Date: 2014-06-06 15:04-0600\n"
 "Last-Translator: Eliermi Cunha Junior <jpegrande@gmail.com>\n"
 "Language-Team: Eliermi Cunha Junior <jpegrande@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -740,13 +740,15 @@ msgstr "Escolha ter ou não uma caixa em botões de controle."
 
 #. configurableMenu@lestcape->settings-schema.json->categories-hover->description
 msgid "Open the category when I move my mouse over it"
-msgstr ""
+msgstr "Abrir a categoria quando eu passar o mouse sobre ela"
 
 #. configurableMenu@lestcape->settings-schema.json->categories-hover->tooltip
 msgid ""
 "Choose whether or not to open the category when the mouse move over it, "
 "otherwise need the mouse click."
 msgstr ""
+"Escolha se quer ou não abrir a categoria,quando mover o mouse sobre ela, "
+"caso contrário, precisará do clique do mouse."
 
 #. configurableMenu@lestcape->settings-schema.json->categories-
 #. icons->description
