Horizontal layout, is now called Luz Helena.

--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -86,6 +86,9 @@ See a complete Change log : https://github.com/lestcape/Configurable-Menu/wiki/C
    - Added "windows" effect on the menu opening and closing.
    - Fixed some bugs on the context menu opening and closing.
    - Fixed some bugs on the menu resize.
+   - Horizontal layout, is now called Luz Helena(my girlfriend demanding their rights).
+   - Minor corrections.
+
 
 1.2-Beta
    - Was added kicker Menu layout.
