--- a/configurableMenu@lestcape/locale/cs_CZ.po
+++ b/configurableMenu@lestcape/locale/cs_CZ.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-06-06 15:02-0600\n"
+"PO-Revision-Date: 2014-06-06 15:51-0600\n"
 "Last-Translator: Satapouch <libor.schejbal@gmail.com>\n"
 "Language-Team: Libor Schejbal <libor.schejbal@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -551,8 +551,8 @@ msgid "Dragon Inverted"
 msgstr "Inverzní Dragon"
 
 #. configurableMenu@lestcape->settings-schema.json->theme->options
-msgid "Horizontal"
-msgstr "Horizontální"
+msgid "Luz Helena"
+msgstr "Luz Helena"
 
 #. configurableMenu@lestcape->settings-schema.json->theme->options
 msgid "Windows 7"
