--- a/configurableMenu@lestcape/locale/sk_SK.po
+++ b/configurableMenu@lestcape/locale/sk_SK.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-06-06 03:50-0600\n"
+"PO-Revision-Date: 2014-06-06 15:51-0600\n"
 "Last-Translator: Roman Beňo <romanbeno273@gmail.com>\n"
 "Language-Team: Roman Beňo <romanbeno273@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -561,8 +561,8 @@ msgid "Dragon Inverted"
 msgstr "Dragon, obrátený"
 
 #. configurableMenu@lestcape->settings-schema.json->theme->options
-msgid "Horizontal"
-msgstr "Vodorovný"
+msgid "Luz Helena"
+msgstr "Luz Helena"
 
 #. configurableMenu@lestcape->settings-schema.json->theme->options
 msgid "Windows 7"
