--- a/configurableMenu@lestcape/locale/default.po
+++ b/configurableMenu@lestcape/locale/default.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-05-03 02:22-0600\n"
+"PO-Revision-Date: 2014-06-15 10:42-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: garibaldo and lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -16,7 +16,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 1.5.4\n"
-"Language: \n"
 
 #: applet.js:83 applet.js:3678 cinnamonMenu.js:536
 msgid "Execution of '%s' failed:"
@@ -738,12 +737,14 @@ msgid "Open the category when I move my mouse over it"
 msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->categories-hover->tooltip
-msgid "Choose whether or not to open the category when the mouse move over it, otherwise need the mouse click."
+msgid ""
+"Choose whether or not to open the category when the mouse move over it, "
+"otherwise need the mouse click."
 msgstr ""
 
-#. configurableMenu@lestcape->settings-schema.json->scroll-
-#. categories->description
-msgid "Show scrolling area of categories"
+#. configurableMenu@lestcape->settings-schema.json->categories-
+#. icons->description
+msgid "Show icons on the categories"
 msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->categories-icons->tooltip
@@ -772,7 +773,8 @@ msgid "Only show arrow when selected category"
 msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->arrow-categories-selected->tooltip
-msgid "Choose whether or not to only show the arrow when selected the category."
+msgid ""
+"Choose whether or not to only show the arrow when selected the category."
 msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->show-app-
