--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,6 +1,6 @@
-Cinnamon Applet: Configurable Menu Version: v1.3-Beta
+Cinnamon Applet: Configurable Menu Version: v1.4-Beta
 
-Last version release date: 06 June 2014
+Last version release date: 09 July 2014
 ***
 Authors: Lester Carballo Pérez (https://github.com/lestcape) and Garibaldo (https://github.com/Garibaldo).
 Contact: lestcape@gmail.com
@@ -21,6 +21,7 @@ Author of language translation:
 - Chinese(Zh_Cn):   Highwind(highwindmx@126.com)
 - Czech(Cs_Cz):     Satapouch(http://www.linux-mint-czech.cz/)
 - Slovak(sk_SK):    Benji(http://sk.gravatar.com/sawwer/)
+- German(de_DE):    Uli(email@kiot.eu)
 
 --------------
 Description
@@ -74,6 +75,12 @@ Change log
 --------------
 See a complete Change log : https://github.com/lestcape/Configurable-Menu/wiki/Change-Log.
 
+1.4-Beta
+   - Was added German language(DE_DE) thanks Uli.
+   - Partially implemented the resize options to be more consistent(need more work).
+   - Fixed, the problem with the menu icon highlighted in the cinnamon theme.
+   - Changed the way of close context menu, to recover the menu size in more cases.
+
 1.3-Beta
    - Was added Slovak language(Sk_SK) thanks Benji.
    - Resolved problem on mini-shake from some locales.
@@ -88,7 +95,6 @@ See a complete Change log : https://github.com/lestcape/Configurable-Menu/wiki/C
    - Fixed some bugs on the menu resize.
    - Horizontal layout, is now called Luz Helena(my girlfriend demanding their rights).
    - Minor corrections.
-
 
 1.2-Beta
    - Was added kicker Menu layout.
