--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,6 +1,6 @@
-Cinnamon Applet: Configurable Menu Version: v1.4-Beta
+Cinnamon Applet: Configurable Menu Version: v1.5-Beta
 
-Last version release date: 10 August 2014
+Last version release date: 15 August 2014
 ***
 Authors: Lester Carballo Pérez (https://github.com/lestcape) and Garibaldo (https://github.com/Garibaldo).
 Contact: lestcape@gmail.com
@@ -74,6 +74,10 @@ https://github.com/lestcape/Cinnamon-Installer
 Change log
 --------------
 See a complete Change log : https://github.com/lestcape/Configurable-Menu/wiki/Change-Log.
+
+1.5-Beta
+   - Fixed an error that do not allow start the menu.
+   - Removed some new warnings in Cinnnamon 2.3
 
 1.4-Beta
    - Was added German language(DE_DE) thanks Uli.
