--- a/configurableMenu@lestcape/locale/de_DE.po
+++ b/configurableMenu@lestcape/locale/de_DE.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-08-10 11:38-0600\n"
+"PO-Revision-Date: 2014-09-12 22:31-0600\n"
 "Last-Translator: \n"
 "Language-Team: Uli <email@kiot.eu>\n"
 "MIME-Version: 1.0\n"
@@ -909,6 +909,14 @@ msgstr "Höhe der Untermenüs:"
 #. configurableMenu@lestcape->settings-schema.json->submenu-height->tooltip
 msgid "Set the submenu height."
 msgstr "Lege die Höhe der Untermenüs fest."
+
+#. configurableMenu@lestcape->settings-schema.json->search-sorted->description
+msgid "Search results sorted by:"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->search-sorted->tooltip
+msgid "Select a method to sort search results."
+msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->search-web->description
 msgid "Enable web search"
