--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -22,6 +22,7 @@ Author of language translation:
 - Czech(Cs_Cz):     Satapouch(http://www.linux-mint-czech.cz/)
 - Slovak(sk_SK):    Benji(http://sk.gravatar.com/sawwer/)
 - German(de_DE):    Uli(email@kiot.eu)
+- Italian(it_IT)    davcri(https://github.com/davcri)
 
 --------------
 Description
@@ -76,7 +77,9 @@ Change log
 See a complete Change log : https://github.com/lestcape/Configurable-Menu/wiki/Change-Log.
 
 1.6-Beta
+   - Was added Italian language(IT_IT) thanks Davcri.
    - Added support for some sorting methods of search results.
+   - Added a limit to the number of packages for not blocking Cinnamon on search.
    - Added support for the new general Cinnamon way of used launchers.
    - Fixed several critical errors and warnings.
    - Added support for Cinnamon 2.3 on general.
