--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -84,6 +84,7 @@ See a complete Change log : https://github.com/lestcape/Configurable-Menu/wiki/C
    - Fixed several critical errors and warnings.
    - Added support for Cinnamon 2.3 on general.
    - Configurable Menu not depend any more of the Cinnamon Menu code.
+   - Added "open with" on right click in the recent apps.
 
 1.5-Beta
    - Fixed an error that do not allow start the menu.
