--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,6 +1,6 @@
 Cinnamon Applet: Configurable Menu Version: v1.6-Beta
 
-Last version release date: 12 September 2014
+Last version release date: 07 december 2014
 ***
 Authors: Lester Carballo Pérez (https://github.com/lestcape) and Garibaldo (https://github.com/Garibaldo).
 Contact: lestcape@gmail.com
@@ -23,6 +23,7 @@ Author of language translation:
 - Slovak(sk_SK):    Benji(http://sk.gravatar.com/sawwer/)
 - German(de_DE):    Uli(email@kiot.eu)
 - Italian(it_IT)    davcri(https://github.com/davcri)
+- Bulgarian(Bg):    Peyu Yovev (spacy01) (spacy00001@gmail.com)
 
 --------------
 Description
@@ -78,11 +79,12 @@ See a complete Change log : https://github.com/lestcape/Configurable-Menu/wiki/C
 
 1.6-Beta
    - Was added Italian language(IT_IT) thanks Davcri.
+   - Was added Bulgarian language(Bg) thanks Peyu Yovev.
    - Added support for some sorting methods of search results.
    - Added a limit to the number of packages for not blocking Cinnamon on search.
    - Added support for the new general Cinnamon way of used launchers.
    - Fixed several critical errors and warnings.
-   - Added support for Cinnamon 2.3 on general.
+   - Added support for Cinnamon 2.3 and 2.4.
    - Configurable Menu not depend any more of the Cinnamon Menu code.
    - Added "open with" on right click in the recent apps.
 
