Add Ukrainian language, thanks to mik. Update French, thanks to dupo.

--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -24,6 +24,7 @@ Author of language translation:
 - German(de_DE):    Uli(email@kiot.eu)
 - Italian(it_IT)    davcri(https://github.com/davcri)
 - Bulgarian(Bg):    Peyu Yovev (spacy01) (spacy00001@gmail.com)
+- Ukraine(uk):      mik (mik_09@ukr.net)
 
 --------------
 Description
